welcome.lessons.welcome.array.notriples.NoTriples.scala.error
noTriples:7: error: ';' expected but ')' found.
		if (nums(i+1)) == inter) {
                                       ^