welcome.lessons.welcome.array.notriples.NoTriples.scala.code
def noTriples(nums:Array[Int]): Boolean = {
	var l = nums.length -3
	var rep = true
	var inter = 0
	for (i<- 0 to l ) {
		inter = nums(i)
		if (nums(i+1)) == inter) {
			if (nums(i+2) == inter) {
				rep = false
			}
		}
	 
		
	}
	return rep
}
